--- a/banking-ws-metro/pom.xml
+++ b/banking-ws-metro/pom.xml
@@ -1,36 +1,45 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>training-ws</groupId>
-	<artifactId>banking-ws-metro</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>Aplikasi Banking WS dengan Metro</name>
+    <groupId>training-ws</groupId>
+    <artifactId>banking-ws-metro</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+    <name>Aplikasi Banking WS dengan Metro</name>
 
-	<dependencies>
+    <dependencies>
 
-		<dependency>
-			<groupId>training-ws</groupId>
-			<artifactId>banking-core</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
-		</dependency>
+        <dependency>
+            <groupId>training-ws</groupId>
+            <artifactId>banking-core</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>webservices-rt</artifactId>
+            <version>1.4</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>		    
-		</plugins>
-	</build>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>		    
+        </plugins>
+    </build>
+    <properties>
+        <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
+    </properties>
 </project>
 
