--- a/banking-ws-spring/pom.xml
+++ b/banking-ws-spring/pom.xml
@@ -16,6 +16,12 @@
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-ws-core</artifactId>
+			<version>2.0.5.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -28,7 +34,7 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
-			</plugin>		    
+			</plugin>
 		</plugins>
 	</build>
 
