maven plugin untuk generate java dari xsd menggunakan jaxb

--- a/banking-ws-spring/pom.xml
+++ b/banking-ws-spring/pom.xml
@@ -35,6 +35,18 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.jvnet.jaxb2.maven2</groupId>
+				<artifactId>maven-jaxb2-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
