--- a/banking-ws-spring/pom.xml
+++ b/banking-ws-spring/pom.xml
@@ -8,6 +8,13 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Aplikasi Banking WS dengan Spring</name>
+    
+    <repositories>
+        <repository>
+            <id>repository.jboss.org</id>
+            <url> http://repository.jboss.org/nexus/content/groups/public-jboss</url>
+        </repository>
+    </repositories>
 
     <dependencies>
 
